@@ -1842,3 +1842,5 @@ Added Ruby rewrite of objview.csh by Rob Guglielmetti.
 
 Fixed bug in reciprocity for tensor tree BTDF representations.  Thanks
 to Andy McNeil for identifying the problem.
+
+Added MNAME and ZNAME variables to ranimove for debugging & testing.
